[package]
name = "agility_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: Remember to revert this before releasing your game!
# Otherwise you will need to include libbevy_dylib alongside your game if you want it to run.
# If you remove the "dynamic" feature, your game executable can run standalone.
# bevy = { version = "0.7.0", features = ["dynamic"] }
bevy = "0.7.0"
bevy_rapier2d = "0.14.0"
rand = "0.8"
#wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[workspace]
resolver = "2"